--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/three": "^0.171.0",
     "tailwindcss": "^3.4.14"
+  },
+  "dependencies": {
+    "es-module-shims": "^1.10.1",
+    "three": "^0.171.0"
   }
 }
